--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "apollo-server-express": "^2.17.0",
     "class-validator": "^0.12.2",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "ioredis": "^4.17.3",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.0.0"
+    "type-graphql": "^1.0.0",
+    "typeorm": "^0.2.26"
   },
   "devDependencies": {
+    "@types/connect-redis": "0.0.14",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
+    "@types/ioredis": "^4.17.4",
     "@types/node": "^14.6.4",
     "nodemon": "^2.0.4"
   }
