--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "boussarsarhaytham@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.17.0",
+    "argon2": "^0.27.0",
     "class-validator": "^0.12.2",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
@@ -19,9 +21,12 @@
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "ioredis": "^4.17.3",
+    "nodemailer": "^6.4.11",
+    "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0",
-    "typeorm": "^0.2.26"
+    "typeorm": "^0.2.26",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/connect-redis": "0.0.14",
@@ -29,6 +34,7 @@
     "@types/express-session": "^1.17.0",
     "@types/ioredis": "^4.17.4",
     "@types/node": "^14.6.4",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.4"
   }
 }
