--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "boussarsarhaytham@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
@@ -17,6 +18,7 @@
     "class-validator": "^0.12.2",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "del": "^6.0.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -24,6 +26,7 @@
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^11.0.0",
     "ioredis": "^4.17.3",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
