--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "author": "boussarsarhaytham@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@types/multer": "^1.4.4",
-    "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
     "base64-img": "^1.0.4",
@@ -39,8 +37,11 @@
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/ioredis": "^4.17.4",
+    "@types/multer": "^1.4.4",
     "@types/node": "^14.6.4",
+    "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "typescript": "^4.0.3"
   }
 }
